--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.caching=false
 org.gradle.configuration-cache=false
 
 # Plugin Metadata
-plugin_group=ExampleGroup
-plugin_description=An example plugin for Hytale!
-plugin_author=It's you!
+plugin_group=Chosmoz
+plugin_description=Chosmoz Hytale Mod
+plugin_author=David (Kstars)
 plugin_website=
-plugin_main_entrypoint=com.example.exampleplugin.ExamplePlugin
+plugin_main_entrypoint=fr.fr.chosmoz.Chosmoz
 server_version=*
