--- a/gradle.properties
+++ b/gradle.properties
@@ -7,5 +7,5 @@ plugin_group=Chosmoz
 plugin_description=Chosmoz Hytale Mod
 plugin_author=David (Kstars)
 plugin_website=
-plugin_main_entrypoint=fr.fr.chosmoz.Chosmoz
+plugin_main_entrypoint=fr.chosmoz.Chosmoz
 server_version=*
