Edit project name and add rain_of_arrows spell (working but have bug)

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.caching=false
 org.gradle.configuration-cache=false
 
 # Plugin Metadata
-plugin_group=Chosmoz
-plugin_description=Chosmoz Hytale Mod
+plugin_group=Welltale
+plugin_description=Welltale Hytale Mod
 plugin_author=David (Kstars)
 plugin_website=
-plugin_main_entrypoint=fr.chosmoz.Chosmoz
+plugin_main_entrypoint=fr.welltale.Welltale
 server_version=*
